--- a/src/components/Forget-password/Forgetpassword.css
+++ b/src/components/Forget-password/Forgetpassword.css
@@ -133,4 +133,17 @@ form {
       top: 30px;
       left: 85px
    }
+   .row6 {
+      position: relative;
+      width: auto;
+      height: 33px;
+      left: 15%;
+      top: 106px;
+   }
+   form {
+      position: relative;
+      width: 80%;
+      left: 11%;
+      top: 200px;
+   }
 }
