--- a/src/components/Forget-password/Forgetpassword.css
+++ b/src/components/Forget-password/Forgetpassword.css
@@ -9,22 +9,14 @@
    height: 100vh;   
    background-repeat: no-repeat;
    background-size: cover;
+   padding-left: 5%;
+   padding-top: 2%;
 }
-.row1 img {
-   height: 104px;
-   width: 276px;
-   left: 112px;
-   top: 50px;
-   border-radius: 0px;
-   position: absolute;
-}
-.row2 p {
-   position: absolute;
+
+.forgetpass2 p {
    width: 535px;
    height: 60px;
-   left: 112px;
-   top: 185px;
-   
+   text-align: left;
    font-family: Mulish;
    font-style: normal;
    font-weight: 700;
@@ -34,13 +26,10 @@
    
    color: #FFFFFF;
 }
-.row3 p {
-   position: absolute;
+.forgetpass3 p {
    width: 555px;
    height: 80px;
-   left: 112px;
-   top: 250px;
-   
+   text-align: left;
    font-family: Mulish;
    font-style: normal;
    font-weight: normal;
@@ -51,8 +40,8 @@
 }
 .row4 {
    position: absolute;
-   left: 112px;
-   top: 350px;
+   left: 50px;
+   top: 300px;
 }
 .row4 span {
    color: white;
@@ -86,13 +75,14 @@
    font-family: 'Mulish', sans-serif;
    font-weight: bold;
 }
-.row6 {
-   position: absolute;
+
+.forgetpass6 {
+   margin-top: 90px;
+}
+.forgetpass6 p {
    width: auto;
    height: 33px;
-   left: 99px;
-   top: 106px;
-
+   text-align: left;
    font-family: 'Mulish';
    font-style: normal;
    font-weight: 600;
@@ -102,8 +92,7 @@
 
    color: #121212;
 }
-.row6 .p2 {
-    position: absolute;
+.forgetpass6 .p2 {
    width: 390px;
    height: 33px;
    left: 0px;
@@ -146,4 +135,4 @@ form {
       left: 11%;
       top: 200px;
    }
-}
+} 
