--- a/src/components/Forget-password/Forgetpassword.css
+++ b/src/components/Forget-password/Forgetpassword.css
@@ -65,9 +65,9 @@
    margin-right: 25px;
 }
 
-.btn-join {
+.btn-forgetpass {
    width: 100%;
-   height: 64px;
+   height: 40px;
    border: none;
    background-color:  #5F2EEA;
    color: white;
