--- a/src/components/Sign-up/Signup.css
+++ b/src/components/Sign-up/Signup.css
@@ -28,6 +28,16 @@
    color: black;
    font-weight: bold;
 }
+.btn-signup {
+   width: 100%;
+   height: 40px;
+   border: none;
+   background-color:  #5F2EEA;
+   color: white;
+   font-size: 16px;
+   font-family: 'Mulish', sans-serif;
+   font-weight: bold;
+}
 /* .purple-tickitz {
    display: none;
 }
