--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap');
 
-.container {
+.container-footer {
+    padding: 30px;
     margin-top: 50px;
+    background-color:white;
 }
 .footer-col1 {
     font-family: 'Mulish', sans-serif;
