--- a/src/components/Cinemacard/Card.css
+++ b/src/components/Cinemacard/Card.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap');
 
+.CinemaCard {
+    border-radius: 10px;
+}
 .h3 {
     font-family: 'Mulish',sans-serif;
     font-weight: bold;
