--- a/src/components/Moviedetail/Moviedetail.css
+++ b/src/components/Moviedetail/Moviedetail.css
@@ -49,8 +49,9 @@
     justify-content: space-evenly;
     
 }
-.col3 .btn-dropdown {
-    background-color: whitesmoke;
+.col3 .btn-dropmovie {
+    background-color:#EFF0F6;
+    border-color: #EFF0F6;
     width: 200px;
     color: black;
     text-align: center;
@@ -75,6 +76,9 @@
     font-family: 'Mulish', sans-serif;
     font-size: 18px;
     color: #5F2EEA;
+}
+.sectionMovie-2 {
+    background-color: whitesmoke;
 }
 @media only screen and (max-width: 576px) {
     .col2 {
