--- a/src/components/Sign-up/Signup.css
+++ b/src/components/Sign-up/Signup.css
@@ -1,213 +1,135 @@
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap');
 
-.left {
-   padding-left: 10%;
-   padding-top: 5%;
-}
-
-.signup2 p{
-   font-family: 'Mulish';
-   font-size: 48px;
-   text-align: left;
-   color: white;
-}
-.signup3 p{
-   font-family: 'Mulish';
-   font-size: 18px;
-   text-align: left;
-   color: white;
-}
-
-.right {
-   padding-top: 50px;
-}
-.signup6 p {
-   font-family: 'Mulish';
-   font-size: 24px;
-   text-align: left;
-   color: black;
-   font-weight: bold;
-}
-.btn-signup {
-   width: 100%;
-   height: 40px;
-   border: none;
-   background-color:  #5F2EEA;
-   color: white;
-   font-size: 16px;
-   font-family: 'Mulish', sans-serif;
-   font-weight: bold;
-}
-/* .purple-tickitz {
-   display: none;
-}
-.left {
+.singUp-left {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0,0,0,0.5)), url('https://m.media-amazon.com/images/M/MV5BMTc5MDE2ODcwNV5BMl5BanBnXkFtZTgwMzI2NzQ2NzM@._V1_.jpg');
    height: 100vh;   
    background-repeat: no-repeat;
    background-size: cover;
+   padding: 30px 98px;
 }
-.row1 img {
+.white-tickitz {
    height: 104px;
    width: 276px;
-   left: 112px;
-   top: 50px;
-   border-radius: 0px;
-   position: absolute;
 }
-.row2 p {
-   position: absolute;
-   width: 535px;
-   height: 60px;
-   left: 112px;
-   top: 205px;
-   
-   font-family: Mulish;
-   font-style: normal;
-   font-weight: bold;
+.signUp1 {
+   margin-top: 30px;
+   font-family: 'Mulish';
    font-size: 48px;
-   line-height: 60px;
-   letter-spacing: 0.003em;
-   
-   color: #FFFFFF;
-}
-.row3 p {
-   position: absolute;
-   width: 555px;
-   height: 80px;
-   left: 112px;
-   top: 280px;
-   
-   font-family: Mulish;
-   font-style: normal;
-   font-weight: normal;
-   font-size: 24px;
-   line-height: 30px;
-   
-   color: rgba(255, 255, 255, 0.7);   
-}
-.row4 {
-   position: absolute;
-   left: 112px;
-   top: 380px;
-}
-.row4 span {
+   font-weight: bold;
    color: white;
-   font-size: 24px;
-   font-family: 'Mulish', sans-serif;
-   align-content: center;
-   
 }
-.row4 .line {
-   border-left: 2px white solid;
-   height: 50px;
-   margin-left: 24px;
-}
-.row4 .btn1 {
+.signUp2 {
+   font-family: 'Mulish';
    font-size: 24px;
+   font-weight:400;
+   color:rgba(255, 255, 255, 0.7);
+}
+.btnNumber-signUp {
    background-color: transparent;
+   border: 2px solid #FFFFFF;
    height: 50px;
    width: 50px;
    border-radius: 50px;
-   border-color: white;
-   margin-right: 25px;
-}
-.password {
-   display: flex;
-   flex-direction: row;
-   border: 1px rgb(223, 221, 221) solid;
-   border-radius: 5px;
-}
-.input-password {
-   border: none;
-}
-.btn-password {
-   background-color: transparent;
-   border: none;
-}
-.btn-password:hover {
-   background-color: transparent;
-}
-.btn-join {
-   width: 100%;
-   height: 64px;
-   border: none;
-   background-color:  #5F2EEA;
-   color: white;
-   font-size: 16px;
-   font-family: 'Mulish', sans-serif;
-   font-weight: bold;
-}
-.row6 {
-   position: absolute;
-   width: auto;
-   height: 33px;
-   left: 99px;
-   top: 106px;
-
    font-family: 'Mulish';
-   font-style: normal;
+   font-size: 24px;
    font-weight: 600;
+   padding: 5px;
+}
+.btn-signUp-detail {
+   padding: 7px 30px;
+   font-family: 'Mulish';
+   font-size: 24px;
+   font-weight: 600;
+   color: #FFFFFF;
+}
+.line {
+   position: relative;
+   left: 23px;
+   height: 48px;
+   width: 0px;
+   border: 2px solid #FFFFFF;
+}
+.singUp-right {
+   padding: 100px 20px;
+}
+.signUp3 {
+   font-family: 'Mulish';
    font-size: 26px;
-   line-height: 33px;
-   letter-spacing: 0.005em;
-
-   color: #121212;
+   color:#121212;
+   font-weight: 600;
 }
-form {
-   position: absolute;
-   left: 85px;
-   top: 180px;
-   width: 70%;
+.signUp4 {
+   font-family: 'Mulish';
+   font-size: 16px;
+   font-weight: 500;
+   color: #696F79;
+   text-align: center;
 }
-.row7 {
-   position: absolute;
-   left: 165px;
-   top: 470px;
+.signUp4 .logIn {
+   font-family: 'Mulish';
+   font-size: 16px;
+   font-weight: 500;
+   color: #5F2EEA;
+   margin-left: 5px;
 }
 .line2 {
-   width: 180px;
+   border: 1px #dedede solid;
+   margin-top: 13px;
+   width: 30%;
    height: 0px;
-   border: 0.5px rgb(243, 243, 243) solid;
 }
-.row8 {
-   position: absolute;
-   left: 105px;
-   top: 500px;
+.registerBtn {
+   width: 100%;
+   height: 56px;
+   background-color: #5F2EEA;
+   border-radius: 4px;
 }
-.row9 {
-   position: absolute;
-   left: 105px;
-   top: 570px;
-}
-.btn-google {
+.btn-signUpGoogle {
+   width: 182px;
+   height: 64px;
+   background-color: white;
+   border: none;
+   border-radius: 4px;
    color: #A0A3BD;
-   background-color: white;
-   border: 1px solid;
-   margin-left: 30px;
-   align-content: center;
-   box-shadow: 1px 1px #A0A3BD;
+   font-family: 'Mulish';
+   font-size: 18px;
+   font-weight: 600;
+   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.08);
 }
-.btn-google:hover {
-   background-color: white;
-   color:black;
-   text-shadow: 1px rgb(221, 220, 220) ;
-}
-.btn-facebook {
+.btn-signUpFacebook {
+   width: 182px;
+   height: 64px;
+   background-color:white;
+   border: none;
+   border-radius: 4px;
    color: #A0A3BD;
-   background-color: white;
-   border: 0.5px solid;
-   margin-left: 120px;
-   box-shadow: 1px 1px #A0A3BD;
+   font-family: 'Mulish';
+   font-size: 18px;
+   font-weight: 600;
+   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.08);
 }
-.btn-facebook:hover {
-   background-color: white;
-   color:black;
-   text-shadow: 1px rgb(221, 220, 220) ;
+.passwordGroup {
+   display: flex;
+   border: 1px solid #DEDEDE;
+   border-radius: 4px;
 }
-*/
-@media only screen and (max-width: 576px) {
-   .left {
+.input-password {
+   background-color: transparent;
+}
+.input-password:hover {
+   background-color: transparent;
+}
+.signUp-Mobile {
+   display: none;
+}
+@media only screen and (max-width: 992px) {
+   .singUp-left {
       display: none;
+   }
+   .singUp-right {
+      margin: 100px;
+   }
+   .signUp-Mobile {
+      display: block;
    }
 }      
