--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,80 +1,68 @@
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap');
 
-.container-footer {
-    margin-top: 50px;
-    background-color:white;
-}
-.footer-col1 {
-    font-family: 'Mulish', sans-serif;
+.img1-footer {
+    Width: 170,23px;
+    Height: 43,94px;
+  }
+  .sectionFooter {
+    padding: 50px 100px 0px;
+  }
+  .sectionFooter .col10{
+    padding: 10px 60px;
+    font-family: 'Mulish',sans-serif;
     font-size: 16px;
     color: #6E7191;
-    text-align: start;
-}
-
-.footer-col2 .heading {
-    font-family: 'Mulish', sans-serif;
-    font-size: 18px;
+    text-align: left;
+  }
+  .sectionFooter .col12 p{
+    font-family: 'Mulish',sans-serif;
+    font-size: 16px;
+    color: #000000;
     font-weight: bold;
-}
-
-.footer-col2 p {
-    font-family: 'Mulish', sans-serif;
+    text-align: left;
+  }
+  .sectionFooter .col12 a {
+    font-family: 'Mulish',sans-serif;
     font-size: 14px;
-    color: #6E7191;
-    text-align: start;
-}
-.footer-col3 .heading {
-    font-family: 'Mulish', sans-serif;
-    font-size: 18px;
-    font-weight: bold;
-}
-.footer-col3 img {
+    color: #4E4B66;
     display: block;
-    margin-bottom: 15px;
-}
-.footer-col4 .heading {
-    font-family: 'Mulish', sans-serif;
-    font-size: 18px;
+    margin-top: 15px;
+  }
+  .sectionFooter .col3 p{
+    font-family: 'Mulish',sans-serif;
+    font-size: 16px;
+    color: #000000;
+    text-align: left;
+  }
+  .sectionFooter .col3 a {
+    display: block;
+    margin-top: 25px;
+  }
+  .sectionFooter .col11 p{
+    font-family: 'Mulish',sans-serif;
+    font-size: 16px;
+    color: #000000;
+    text-align: left;
     font-weight: bold;
-}
-.footer-col4 span{
+  }
+  .sectionFooter .col11 a{
+    font-family: 'Mulish',sans-serif;
+    font-size: 14px;
+    color: #4E4B66;
+    display: block;
+    margin-top: 25px;
+  }
+  .footer-mobile {
+    display: none;
+  }
+  .sectionFooter .col5 p{
     font-family: 'Mulish', sans-serif;
     font-size: 14px;
-    color: #6E7191;
-    display: flex;
-    margin-bottom: 15px;
-    height: 22px;
-}
-.footer-col4 span p{
-    margin-left: 5px;
-}
-.footer-col5 p {
-    font-size: 12px;
-    font-family: 'Mulish', sans-serif;
+    color: #4E4B66;
     text-align: center;
-    color: #6E7191;
-}
-@media only screen and (max-width: 576px) {
-    .footer-col2 {
-        margin-bottom: 20px;
-    }
-    .footer-col2 p {
-        display: inline;
-    }
-    .footer-col3 {
-        margin-bottom: 20px;
-    }
-    .footer-col3 img {
-        display: inline;
-        margin-right: 20px;
-        height: 30px;
-    }
-    .footer-col4 span p {
-        display: none;
-    }
-    .footer-col4 span {
-        display: inline;
-        margin-right: 25px;
-    }
+  } 
+  
+
+@media only screen and (max-width: 992px) {
 
 }
