--- a/src/components/Ticket/ticket.css
+++ b/src/components/Ticket/ticket.css
@@ -8,7 +8,18 @@
 .ticket-paper {
     background-color: white;
     padding: 100px 50px;
+    border-radius: 8px;
 }
+.circleTicket1 {
+    height: 43.02px;
+    width: 43.02px;
+    border-radius: 43px;
+    background-color: white;
+    position: relative;
+    top: 20px;
+    left: 643px;
+}
+
 .ticket-top-left {
     background-color: #5F2EEA;
     display: flex;
